--- a/index.html
+++ b/index.html
@@ -1,1 +1,123 @@
-I Love Lollipops!
+
+<html>
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+        <style>
+            #pageTitle {
+                font-size: 50px;
+                width: 50%;
+                margin: auto;
+                text-align: center;
+            }
+
+            #pagemenu {
+                width: 50%;
+                margin: auto;
+                text-align: center;   
+            }
+            #pageTitleHeart {
+                font-size: 40px;
+                color:red
+            }
+            #threelollipops {
+                width: 50%;
+                margin: auto;
+                text-align: center;   
+            }
+
+            .lollipop {
+                display:block;
+                margin: 25px;
+            }
+            
+            .lollipop-image {
+                display:inline-block; 
+                vertical-align: top;
+            }
+
+            .lollipop-description {
+                display:inline-block;
+                text-align:left;
+                max-width: 300px;
+                min-width: 300px;
+            }
+
+            .lollipop-name {
+                font-size: 18px;
+                font-weight: bold;
+            }
+
+            .lollipop-price {
+                display:inline-block; 
+                vertical-align: top;
+            }
+        </style>
+    </head>
+    <body>
+        <div>
+            <div id="pageTitle">
+                I <i id="pageTitleHeart" class="fa fa-heart"></i> Lollipops
+            </div>
+            <div id="threelollipops">
+                <img src="images/lollipopstand.jpg" width="400" />
+            </div>
+            <div>
+                <p style="text-align: center;font-size: 20px;">
+                    Welcome to  I <i class="fa fa-heart" style="color: red;"></i> lollipops! My name is Lexy and my sister's name is Hayley.
+                </p>
+            </div>
+            <div id="pageMenu">
+                <div>
+                    <div class="lollipop">
+                        <div class="lollipop-image">
+                            <img src="images/chupachups.jpg" width="50"/>
+                        </div>
+                        <div class="lollipop-description">
+                            <div class="lollipop-name">Chupa Chups.......................................</div>
+                            <div>Cherry, strawberry, choco vanilla, lemon, green apple, creamy strawberry, orange</div>
+                        </div>
+                        <div class="lollipop-price">
+                            $0.50
+                        </div>
+                    </div>
+                    <div class="lollipop">
+                        <div class="lollipop-image">
+                            <img src="images/blowpop.jpg" width="50"/>
+                        </div>
+                        <div class="lollipop-description">
+                            <div class="lollipop-name">Blow Pops............................................</div>
+                            <div>Watermelon, cherry, grape, strawberry</div>
+                        </div>
+                        <div class="lollipop-price">
+                            $0.50
+                        </div>
+                    </div>
+                    <div class="lollipop">
+                        <div class="lollipop-image">
+                            <img src="images/tootsie.jpg" width="50"/>
+                        </div>
+                        <div class="lollipop-description">
+                            <div class="lollipop-name">Tootsie Pops............................................</div>
+                            <div>Cherry, grape</div>
+                        </div>
+                        <div class="lollipop-price">
+                            $0.50
+                        </div>
+                    </div>
+                    <div class="lollipop">
+                        <div class="lollipop-image">
+                            <img src="images/minitootsie.jpg" width="50"/>
+                        </div>
+                        <div class="lollipop-description">
+                            <div class="lollipop-name">Mini Tootsie Pops..................................</div>
+                            <div>cherry</div>
+                        </div>
+                        <div class="lollipop-price">
+                            $0.25
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
